--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-flask==1.1.2
-flask-sqlalchemy==2.5.1
+flask==2.0.3
+peewee==3.14.10
 requests==2.31.0
+pytest==7.4.4
+pytest-flask==1.2.0
+pytest-mock==3.6.1
+werkzeug==2.0.3
